--- a/GPR.ipynb
+++ b/GPR.ipynb
@@ -44,6 +44,9 @@
     "\n",
     "##  Read Data  ##\n",
     "\n",
+    "!wget https://raw.githubusercontent.com/mannodiarun/ML_binaries/refs/heads/main/Data.csv\n",
+    "!wget https://raw.githubusercontent.com/mannodiarun/ML_binaries/refs/heads/main/Desc_labels.xlsx\n",
+    "\n",
     "ifile  = open('Data.csv', \"rt\")\n",
     "reader = csv.reader(ifile)\n",
     "csvdata=[]\n",
