--- a/RFR.ipynb
+++ b/RFR.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "  ##  Train Random Forest Model  ##\n",
     "\n",
-    "rfreg_opt = GridSearchCV(RandomForestRegressor(bootstrap=True, criterion='mse'), param_grid=param_grid, cv=5)\n",
+    "rfreg_opt = GridSearchCV(RandomForestRegressor(bootstrap=True, criterion='squared_error'), param_grid=param_grid, cv=5)\n",
     "\n",
     "rfreg_opt.fit(X_train_fl,Prop_train_fl)\n",
     "Pred_train_fl = rfreg_opt.predict(X_train_fl)\n",
